09-Kubernetes/Day-16-Ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: ecommerce
  labels:
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: sachinquamtumcloud/ecommerce:v1
          ports:
            - containerPort: 80
