09-Kubernetes/Day-16-Ingress/service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 80
